# LABA5_Bootcamp

./: .bash_history  .bashrc.save  .bashrc.save.1  .gitconfig  .gitignore  .gitmodules  .viminfo  .wget-hsts  2-2.cpp  README.md  branch_test.py  my_robot.urdf
.cache/mesa_shader_cache/: index
.config/: QtProject.conf
.rviz2/: persistent_settings
Hylion/hylion_ws/: FILE_STRUCTURE.md  LEROBOT_ACT_JSON_MAPPING.md  brain_node.py  hylion_brain_test.py  hylion_brain_v2.py  hylion_perception.py  hylion_soarm.py  hylion_sw_dev_plan.md  perception_node.py  soarm_node.py  test_nodes.py
LABA6/: laba_6th_everytime.md  laba_6th_recruitment.md
PHASE 1/: 1-3.py  1-6.py
PHASE_1/: 1-1.py  1-2.py  1-3.py  1-3_test.py  1-4.py  1-5.py  1-5_motor_test.py  1-5_new.py  1-5_smoothing.py  1-5_test.py  1-6(html_source).py  1-6(mini).py  1-6(revised).py  1-6.md  1-6_new.py  HY-WiFi_fail.md  PHASE_1.md  babogaeguri_setting.md  debug.md  hardware_test.py
PHASE_1/templates/: index.html
PHASE_2/: 2-2.cpp  2-2_v2.cpp  2-3.cpp  2-4.cpp  2-4_90.cpp  2-4_fowardtest.cpp  2-4_v2.cpp  2-5.cpp  2-6ras.py
PHASE_3/: 3_3.launch.py  3_4.launch.py  keyboard_cmd_vel.py  maze_world.sdf  my_robot.urdf  phase3_urdf_guide.docx  simple_robot.urdf  simple_world.sdf  teleop.py
PHASE_3/LiDAR_3_5/: README.md  package.xml  setup.cfg  setup.py
PHASE_3/Sungrae/: 3_3.launch.py  3_5.launch.py  3_6.launch.py  3_7.launch.py  (+8 more)
PHASE_3/wheeled_robot_urdf_3_2/: package.xml  setup.py
PHASE_3/wheeled_robot_urdf_3_2/launch/: display.launch.py
PHASE_3/wheeled_robot_urdf_3_2/rviz/: robot_view.rviz
PHASE_3/wheeled_robot_urdf_3_2/urdf/: wheeled_robot.urdf
PHASE_5/: ACT_flow.md  calibration_transfer_guide.md  hardware_requirements.md  install_log_sangyun.md  lerobot_install.md  my_follower.json  my_leader.json  resolvearm.md  sangyun_calibration.md
SMACH/: hylion_smach_test.py  json_structure.json
dev_flow_example/: 02_00edge_deploy_checklist.md  02_02_network_connection.md  03_01_deploy_flow.md  99_hylion_sw_dev_plan.md  Dockerfile  README.md  requirements.txt
dev_flow_example/ros2_ws/src/breakout_bridge_pkg/: package.xml  setup.cfg  setup.py
dev_flow_example/ros2_ws/src/breakout_bridge_pkg/breakout_bridge_pkg/: nuc_pub.py  nuc_sub.py  orin_pub.py  orin_sub.py
sangyun_youtube/: README  youtube_basic_planning.md
smolVLA/: CLAUDE.md  README.md  arm_2week_plan.md  deploy_orin.sh  sync_lerobot.sh  todo.md
smolVLA/orin/: pyproject.toml
smolVLA/orin/examples/tutorial/smolvla/: smoke_test.py
smolVLA/orin/lerobot/policies/smolvla/: smolvlm_with_expert.py
smolVLA/orin/scripts/: run_teleoperate.sh  setup_env.sh
(+115 files in other folders)
