<?xml version="1.0"?>
<package format="3">
  <name>wheeled_robot_urdf_3_2</name>
  <version>0.1.0</version>
  <description>2-wheeled robot with caster wheel URDF description</description>
  <maintainer email="student@ros2.dev">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임 의존성 -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
