[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot"
version = "0.5.2"
description = "LeRobot curated subset for Jetson Orin (smolVLA + SO-100)"
requires-python = ">=3.10"

dependencies = [
    # JetPack 6.x(CUDA 12.x)와 호환되는 범위로 고정해서 cu130 계열 업그레이드 방지
    "torch>=2.5,<2.7",
    "torchvision>=0.20.0,<0.22.0",
    "numpy>=2.0.0,<2.3.0",
    "opencv-python-headless>=4.9.0,<4.14.0",
    "Pillow>=10.0.0,<13.0.0",
    "einops>=0.8.0,<0.9.0",
    "draccus==0.10.0",
    "huggingface-hub>=1.0.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "gymnasium>=1.1.1,<2.0.0",
    "safetensors>=0.4.3,<1.0.0",
    "packaging>=24.2,<26.0",
    "termcolor>=2.4.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "cmake>=3.29.0.1,<4.2.0",
    "setuptools>=71.0.0,<81.0.0",
]

[project.optional-dependencies]
smolvla = [
    "transformers==5.3.0",
    "num2words>=0.5.14,<0.6.0",
    "accelerate>=1.7.0,<2.0.0",
]
hardware = [
    "pynput>=1.7.8,<1.9.0",
    "pyserial>=3.5,<4.0",
    "deepdiff>=7.0.1,<9.0.0",
]
feetech = [
    "feetech-servo-sdk>=1.0.0,<2.0.0",
    "pyserial>=3.5,<4.0",
    "deepdiff>=7.0.1,<9.0.0",
]
zmq = [
    "pyzmq>=26.2.1,<28.0.0",
]

[project.scripts]
lerobot-eval        = "lerobot.scripts.lerobot_eval:main"
lerobot-teleoperate = "lerobot.scripts.lerobot_teleoperate:main"

[tool.setuptools.packages.find]
where = ["."]