<?xml version="1.0"?>
<package format="3">
  <name>breakout_bridge_pkg</name>
  <version>0.0.1</version>
  <description>Breakout game Orin-NUC score bridge</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
